# auto-discovery

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  PUBLICATION_READINESS.md  README.md  RELEASE_READINESS_SUMMARY.md
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
benches/: discovery_benchmarks.rs
dashboards/: service-dashboard.json
docs/: deployment.md  mdns_status.md  migration.md  performance.md  protocol_matrix.md  security.md
examples/: README.md  basic_usage.rs  basic_usage_fixed.rs  basic_usage_new.rs  builder_pattern.rs  comprehensive_api_demo.rs  cross_protocol.rs  dns_sd_example.rs  multi_protocol_security.rs  non_network_test.rs  production_safety.rs  security_verification.rs  simple_discovery.rs  simple_discovery_fixed.rs
src/: config.rs  discovery.rs  error.rs  health.rs  lib.rs  metrics.rs  registry.rs  safety.rs  security.rs  service.rs  shutdown.rs  simple.rs  types.rs  utils.rs
src/config/: env.rs
src/protocols/: dns_sd.rs  mdns.rs  mod.rs  simple_mdns.rs  upnp.rs
src/safety/: load_balancer.rs
src/security/: tsig.rs
src/testing/: stress.rs
tests/: mdns_tests.rs  upnp_tests.rs
