[package]
name = "auto-discovery"
version = "0.1.0"
edition = "2024"
authors = ["Eric Evans <ciresnave@gmail.com>"]
description = "A general-purpose network and system service discovery library for Rust applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciresnave/auto-discovery"
keywords = ["network", "discovery", "mdns", "service", "upnp"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[features]
default = ["metrics", "secure", "dns-sd", "mdns-sd", "upnp"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:tokio-metrics"]
secure = ["dep:ring", "dep:x509-parser", "dep:native-tls"]
testing = ["dep:tempfile"]
dns-sd = ["trust-dns-client/dnssec"]
mdns-sd = ["dep:mdns-sd"]
basic-mdns = []  # Use basic mDNS implementation
mdns = ["dep:mdns"]
simple-mdns = ["dep:simple-mdns"]
upnp = ["dep:reqwest", "dep:quick-xml"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
socket2 = "0.6"
trust-dns-resolver = "0.23"
trust-dns-client = { version = "0.23", features = ["dnssec"], optional = true }
trust-dns-proto = "0.23"
mdns-sd = { version = "0.13.11", optional = true }
mdns = { version = "3.0", optional = true }
simple-mdns = { version = "0.6", features = ["async-tokio"], optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
rand = "0.9"

# Security and verification
ring = { version = "0.17", optional = true }
x509-parser = { version = "0.17", optional = true }
native-tls = { version = "0.2", optional = true }
base64 = "0.22"
hex = "0.4"

# Additional networking
tokio-util = { version = "0.7", features = ["net"] }
bytes = "1.5"

# Production safety and monitoring
governor = "0.10"
backoff = "0.4"
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", optional = true }
tokio-metrics = { version = "0.4", optional = true }
tempfile = { version = "3.8", optional = true }

# Health monitoring and load balancing
hyper = { version = "1.6", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
flume = "0.11.1"
url = "2.5.4"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports", "async_tokio"] }
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.8"
test-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1.3"
rand = "0.9"

[workspace]
members = []
resolver = "2"

[[bench]]
name = "discovery_benchmarks"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
